--- a/src/components/TitleScreen.css
+++ b/src/components/TitleScreen.css
@@ -117,6 +117,10 @@
   margin-top: 40px;
   padding-top: 30px;
   border-top: 2px solid #ddd;
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .survey-link-button {
